# BookingTickets

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: json.hpp  sqlite_orm.h
src/: Database.h  Interactive.h  Ticket.h  Validate.h  Weather.h  main.cpp
